--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,23 @@
-.App {
-  text-align: center;
+.main{
+    margin:100px auto;
+    
+    border: 3px solid green;
+    padding: 20px;
+    width: 70%;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.btn{
+    background: cornflowerblue;
+    color: white;
+    padding: 12px 16px;
+    border-radius: 5px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.text{
+    font-size: 24px;
+    margin: 12px 0px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.input-text{
+    margin-right: 30px;
+    border: 1px solid rgb(23, 26, 224);
+    border-radius: 5px;
+    padding: 8px;
 }
